# executorch

./: .gitignore  AGENTS.md  CMakeLists.txt  DEBUG.md  README.md  api-plan.md  exshader.md  setup.py
backends/vulkan/: CMakeLists.txt  custom_ops_lib.py  op_registry.py  vulkan_preprocess.py
backends/vulkan/_passes/: insert_prepack_nodes.py
devtools/: __init__.py
devtools/agent_debug/: TARGETS  __init__.py  cli.py  core.py  delegate_abi.py  delegate_abi_cli.py  llm_step_compare.py
devtools/etdump/: etdump_flatcc.cpp  etdump_flatcc.h
devtools/inspector/: _inspector.py  _inspector_utils.py  _intermediate_output_capturer.py
devtools/size_analysis_tool/: size_analysis_tool_test.py
devtools/visualization/: visualization_utils_test.py
exir/: lowered_backend_module.py
exir/backend/: backend_api.py  utils.py
exshader/: check_pure_vulkan.py  env.sh  export_llm.py
exshader/diag/: abi_diff.py  collect_inspector_artifacts.py  compare_inspector_runs.py  llm_pte_sweep.py  llm_step_compare.py
exshader/models/: __init__.py
exshader/recipes/: llm_decode.py
exshader/runtime/: __init__.py  session.py  types.py
exshader/scripts/: build_llama_main.sh  build_vulkan.sh  check_qwen3_pure_vulkan.sh  common.sh  export_qwen3.sh  export_qwen3_5.sh  inspect_compare.sh  inspect_with_inspector.sh  run_qwen3.sh  run_qwen3_5_llama_main.sh
exshader/shader_jit/: build_shader_bundle.py
extension/exshader/runtime/: CMakeLists.txt  pybindings.cpp
extension/module/: module.cpp
extension/pybindings/: pybindings.cpp  pybindings.pyi
runtime/: __init__.py
runtime/core/: event_tracer.h
runtime/executor/: method.cpp  program.cpp
tools/et_tools/: check_pure_vulkan.py
(+66 files in other folders)
